--- a/test.html
+++ b/test.html
@@ -1,39 +1,30 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Instant Garden Fence Quote | Transparent Online Pricing</title>
-<meta name="description" content="Get an instant garden fence quote with fully transparent pricing. Enter your fence length and gates to receive a detailed cost breakdown online.">
-<link rel="canonical" href="https://steely1968.github.io/instant-fence-quote.html">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Professional Pressure Washing in Askern DN6 | Driveways, Patios & Exterior Cleaning</title>
+
+<link rel="canonical" href="https://homerepairs4u.com/services/pressure-washing.html">
+<meta name="description" content="Professional pressure washing in Askern DN6 and within 10 miles. Driveways, patios, decking, paths and walls cleaned safely. Fast, insured and affordable. Call 07735 873694.">
+<meta name="robots" content="index, follow">
+
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
-/* ----------------------------
-GLOBAL STYLES
------------------------------ */
-body {
-font-family: Arial, sans-serif;
-background: #f8f8f8;
-color:#222;
+html{ -webkit-text-size-adjust:100%; }
+
+body{
 margin:0;
 padding:0;
-line-height:1.6;
+font-family:Arial, sans-serif;
+background:#f9f9f9;
+color:#222;
+line-height:1.65;
 }
 
-a { color:#000; text-decoration:none; }
-a:focus { outline:3px solid #27ae60; outline-offset:2px; }
-
-main {
-max-width:1000px;
-margin:30px auto;
-padding:25px;
-background:#fff;
-border:1px solid #ccc;
-}
-
-/* ----------------------------
-HEADER
------------------------------ */
+/* HEADER */
 header{
 text-align:center;
 padding:25px 10px;
@@ -58,59 +49,36 @@ font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
 }
+.call-btn:hover{ background:#333; }
 
-.call-btn:hover,
-.call-btn:focus{
-background:#333;
-color:#fff;
-outline:none;
+/* CONTENT */
+main{
+max-width:900px;
+margin:0 auto;
+background:#fff;
+padding:25px 15px;
 }
 
-/* ----------------------------
-FORM ELEMENTS
------------------------------ */
-h1, h2 { color:#000; }
+h1,h2,h3{ color:#111; }
 
-h1 { margin-bottom:15px; }
-h2 { margin-top:25px; }
-
-p { margin:15px 0; }
-
-label {
-font-weight: bold;
-display:block;
-margin-top:15px;
+.lightbox{
+display:none;
+position:fixed;
+inset:0;
+background:rgba(0,0,0,0.85);
+z-index:9999;
+align-items:center;
+justify-content:center;
 }
-
-input[type=number] {
-width:100%;
-padding:10px;
-font-size:16px;
-margin-top:5px;
-}
-
-button {
-margin-top:20px;
-padding:12px 24px;
-background:#000;
-color:#fff;
-border:none;
+.lightbox img{
+max-width:95%;
+max-height:95%;
 border-radius:6px;
-font-weight:bold;
-cursor:pointer;
 }
+.lightbox:target{ display:flex; }
 
-button:hover, button:focus {
-background:#333;
-outline:3px solid #27ae60;
-}
-
-#fenceResult ul { padding-left:20px; }
-
-/* ----------------------------
-FOOTER
------------------------------ */
-.site-footer{
+/* FOOTER */
+footer{
 background:#000;
 color:#fff;
 text-align:center;
@@ -118,228 +86,162 @@ padding:25px 15px;
 margin-top:40px;
 font-size:14px;
 }
-
-.footer-services{
-background-color:black;
-padding:20px;
-text-align:center;
-margin-top:15px;
-}
-
-.footer-services a{
-color:white;
-margin:0 10px;
-}
+footer a{ color:#fff; text-decoration:none; margin:0 8px; }
 </style>
 
-<!-- ===========================
-FAQ SCHEMA JSON-LD
-=========================== -->
+<!-- LOCAL BUSINESS SCHEMA -->
 <script type="application/ld+json">
 {
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
-{
-"@type": "Question",
-"name": "How do I get a fence quote online?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Use our Instant Online Fence Quote calculator. Enter your fence length and number of gates to receive a detailed cost breakdown instantly."
-}
+"@context":"https://schema.org",
+"@type":"HomeAndConstructionBusiness",
+"@id":"https://homerepairs4u.com/#pressure-washing",
+"name":"Home Repairs 4U",
+"url":"https://homerepairs4u.com/",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"description":"Professional pressure washing and exterior cleaning in Askern DN6 and surrounding areas.",
+"telephone":"+447735873694",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Askern",
+"addressRegion":"South Yorkshire",
+"postalCode":"DN6",
+"addressCountry":"GB"
 },
-{
-"@type": "Question",
-"name": "Does the quote include labour and materials?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, the quote includes panels, posts, gravel boards, postcrete, gates, and professional labour."
-}
+"areaServed":{
+"@type":"GeoCircle",
+"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
+"geoRadius":16093
 },
-{
-"@type": "Question",
-"name": "Can I adjust the quote if I change my fence length?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Absolutely. The calculator updates instantly when you change the fence length or number of gates."
+"openingHoursSpecification":[{
+"@type":"OpeningHoursSpecification",
+"dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+"opens":"07:00",
+"closes":"20:00"
+}],
+"makesOffer":[{
+"@type":"Offer",
+"itemOffered":{
+"@type":"Service",
+"name":"Pressure Washing & Exterior Cleaning"
 }
-}
-]
+}]
 }
 </script>
 
+<!-- FAQ SCHEMA -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{
+"@type":"Question",
+"name":"What surfaces can you pressure wash?",
+"acceptedAnswer":{"@type":"Answer","text":"We clean driveways, patios, paths, decking, walls, brickwork, render, fencing and most outdoor hard surfaces safely."}
+},
+{
+"@type":"Question",
+"name":"Do you cover areas outside Askern?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. We cover all locations within 10 miles of Askern including Campsall, Norton, Bentley, Adwick-le-Street and surrounding villages."}
+},
+{
+"@type":"Question",
+"name":"Is pressure washing safe?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. We assess each surface and adjust pressure and methods accordingly to prevent damage."}
+}
+]}
+</script>
 </head>
 
 <body>
 
-<!-- Skip link for accessibility -->
-<a href="#maincontent" class="skip-link" style="position:absolute;left:-999px;top:auto;background:#27ae60;color:#fff;padding:8px;z-index:100;">Skip to main content</a>
-
-<!-- ===========================
-HEADER
-=========================== -->
 <header>
-<img src="/images/logo.webp"
-alt="Home Repairs 4U logo"
-class="logo"
-width="600" height="200"
-loading="eager">
-
-<nav aria-label="Main navigation">
-<div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/" style="font-size:20px; font-weight:600;">Home</a>
-</div>
-</nav>
-
-<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<br>
+<a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a>
+<br>
+<a href="tel:07735873694" class="call-btn">Call Now: 07735 873694</a>
 </header>
 
+<main>
 
-<!-- ===========================
-MAIN CONTENT
-=========================== -->
-<main id="maincontent">
+<h1>Professional Pressure Washing in Askern DN6</h1>
 
-<h1>Instant Garden Fence Quote – Transparent Online Pricing</h1>
+<p>
+<strong>Home Repairs 4U</strong> provides reliable, professional <strong>pressure washing and exterior cleaning services in Askern DN6</strong> and all surrounding areas within a 10-mile radius.
+With over <strong>30 years of hands-on experience</strong>, we restore driveways, patios, decking and paths to a clean, safe and refreshed condition.
+</p>
 
-<p>Getting a new fence shouldn't be confusing or time-consuming. Our <strong>Instant Online Fence Quote Tool</strong> gives you a clear, honest price based on real materials and real labour costs. No waiting for callbacks. No hidden extras. Just straightforward, transparent pricing you can trust.</p>
+<h2>Instant Pressure Washing Quote</h2>
 
-<!-- ===========================
-CALCULATOR NEAR TOP
-=========================== -->
-<section aria-labelledby="quote-form-title">
-<h2 id="quote-form-title">Calculate Your Fence Cost Instantly</h2>
+<form id="quoteForm">
+<label for="sqm">Total area in square metres *</label><br>
+<input type="number" id="sqm" min="1" step="0.01" required style="width:100%;padding:10px;font-size:16px;"><br><br>
 
-<form id="fenceForm" aria-describedby="fenceCalculatorDesc">
-<p id="fenceCalculatorDesc">Enter the length of your fence in metres and the number of gates to get an instant detailed quote.</p>
+<input type="checkbox" id="jetwash" checked> Jet washing<br>
+<input type="checkbox" id="fungicide"> Fungicide treatment<br>
+<input type="checkbox" id="hardbrush"> Hard brushing<br>
+<input type="checkbox" id="resanding"> Block paving resanding<br>
+<input type="checkbox" id="sealing"> Surface sealing<br><br>
 
-<label for="length">Length of fencing (metres)*</label>
-<input type="number" id="length" name="length" min="1" step="0.01" required aria-required="true">
-
-<label for="numGates">Number of gates</label>
-<input type="number" id="numGates" name="numGates" min="0" step="1" value="0" aria-required="true">
-
-<button type="button" onclick="calculateFenceQuote()">Get Quote</button>
+<button type="button" onclick="calculateQuote()" class="call-btn">Get Quote</button>
 </form>
 
-<div id="fenceResult" aria-live="polite"></div>
-</section>
+<div id="quoteResult" style="margin-top:20px;font-weight:bold;"></div>
 
-<!-- ===========================
-DETAILED SEO TEXT BELOW
-=========================== -->
-<h2>How Our Fence Quote Calculator Works</h2>
-<p>Simply enter your fence length and the number of gates you need. The system will instantly calculate the cost of:</p>
-<ul>
-<li>Fence panels</li>
-<li>Concrete posts</li>
-<li>Gravel boards</li>
-<li>Postcrete</li>
-<li>Labour</li>
-<li>Gate installation (if selected)</li>
-</ul>
-<p>Every component is itemised clearly so you can see exactly where your money goes and plan your budget effectively. Adjust the fence length or number of gates to see how the price changes in real time.</p>
+<script>
+function calculateQuote(){
+const sqm=parseFloat(document.getElementById('sqm').value);
+if(!sqm||sqm<=0){alert("Enter a valid area.");return;}
+let total=40;
+let items=["Base service fee: £40.00"];
 
-<h2>Why Use an Online Fence Quote?</h2>
-<ul>
-<li><strong>Fast results –</strong> no waiting for a callback or appointment.</li>
-<li><strong>Transparent pricing –</strong> every part of your fence is listed with its cost.</li>
-<li><strong>Budget-friendly planning –</strong> ideal for homeowners, landlords, or anyone preparing a garden project.</li>
-<li><strong>Based on real UK costs –</strong> including materials, labour, and local pricing standards.</li>
-<li><strong>Easy to adjust –</strong> change the length or gates to see the new price immediately.</li>
-</ul>
+if(jetwash.checked){let p=sqm*2.5; total+=p; items.push(`Jet wash: £${p.toFixed(2)}`);}
+if(fungicide.checked){let p=sqm*0.8; total+=p; items.push(`Fungicide: £${p.toFixed(2)}`);}
+if(hardbrush.checked){let p=sqm*0.7; total+=p; items.push(`Hard brush: £${p.toFixed(2)}`);}
+if(resanding.checked){let p=sqm*3.5; total+=p; items.push(`Resanding: £${p.toFixed(2)}`);}
+if(sealing.checked){let p=sqm*4.5; total+=p; items.push(`Sealing: £${p.toFixed(2)}`);}
 
-<h2>What’s Included in the Quote?</h2>
+document.getElementById("quoteResult").innerHTML =
+`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p>Total: £${total.toFixed(2)}</p>`;
+}
+</script>
+
+<h2>Why Choose Home Repairs 4U?</h2>
 <ul>
-<li><strong>Fence Panels:</strong> Durable timber panels, measured at 1.82m, built to last.</li>
-<li><strong>Concrete Posts:</strong> Properly reinforced posts to ensure stability and longevity.</li>
-<li><strong>Gravel Boards:</strong> Protect timber from rot and ground moisture.</li>
-<li><strong>Postcrete:</strong> Fast-setting concrete to secure posts in the ground.</li>
-<li><strong>Labour:</strong> Calculated per metre to cover professional installation.</li>
-<li><strong>Gates:</strong> Secure timber gates with quality hinges and latches.</li>
+<li>✔ Over 30 years of experience</li>
+<li>✔ Fully insured & professional</li>
+<li>✔ Local Askern-based service</li>
+<li>✔ Honest pricing – no surprises</li>
+<li>✔ Safe methods for every surface</li>
 </ul>
 
-<h2>Who Is This Quote Tool For?</h2>
-<p>It’s perfect for:</p>
-<ul>
-<li>Homeowners planning garden improvements</li>
-<li>Landlords checking replacement or repair costs</li>
-<li>Buyers budgeting for renovations</li>
-<li>Anyone wanting a fast, no-obligation estimate</li>
-</ul>
+<h2>Areas We Cover</h2>
+<p>
+Askern, Campsall, Norton, Skellow, Carcroft, Bentley, Adwick-le-Street, Arksey, Burghwallis, Owston, Sykehouse and all areas within 10 miles.
+</p>
 
-<h2>Accurate, Not Guesswork</h2>
-<p>Unlike generic online calculators, our tool uses real trade pricing for panels, posts, labour and gates. The results reflect what you would actually pay for a professionally installed fence. This is accurate, practical, and useful for genuine planning.</p>
+<h2>Book Your Pressure Washing Today</h2>
+<p>
+Restore your driveway, patio or decking with a trusted local specialist.
+</p>
 
-<h2>Start Your Instant Fence Quote Above</h2>
-<p>Enter your fence length and number of gates to receive your complete cost breakdown instantly. There’s no obligation to continue – the quote is yours to use for budgeting, planning, or discussion with our team.</p>
+<div style="text-align:center;">
+<a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
+</div>
 
 </main>
 
-<!-- ===========================
-FOOTER
-=========================== -->
-<footer class="site-footer">
-© Home Repairs 4U | Fencing • Gate Fitting • Repairs • Sheds • Timber Storage | Askern DN6 | Call 07735 873694
-
-<div class="footer-services">
-<p style="color:white;">Our Services:</p>
+<footer>
+© Home Repairs 4U – Pressure Washing & Exterior Cleaning – Askern DN6
+<br>
 <a href="/services/Exterior-decorating.html">Exterior Decorating</a>
-<a href="/services/garden.html">Garden</a>
+<a href="/services/fence-installation.html">Fencing</a>
 <a href="/services/guttering.html">Guttering</a>
-<a href="/services/Pressure-washing.html">Pressure Washing</a>
 <a href="/services/upvc-restoration.html">uPVC Restoration</a>
-</div>
+<br>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" rel="noopener">Facebook</a>
 </footer>
-
-<!-- ===========================
-JAVASCRIPT
-=========================== -->
-<script defer>
-function calculateFenceQuote() {
-const lengthInput = document.getElementById('length').value.trim().replace(',', '.');
-const fenceLength = parseFloat(lengthInput);
-
-if (isNaN(fenceLength) || fenceLength <= 0) {
-alert("Please enter a valid length in metres.");
-return;
-}
-
-const numGates = parseInt(document.getElementById('numGates').value) || 0;
-
-const panelLength = 1.82;
-const panelCost = 40;
-const postCost = 18;
-const gravelBoardCost = 20;
-const postcreteCost = 7;
-const labourRate = 50;
-
-const chargeableLength = fenceLength - numGates;
-const panels = Math.ceil(chargeableLength / panelLength);
-const posts = panels + 2;
-const cementBags = posts * 2;
-const gravelBoards = panels;
-const labour = chargeableLength * labourRate;
-const gateCost = numGates * 150;
-
-const panelsTotal = panels * panelCost;
-const postsTotal = posts * postCost;
-const gravelTotal = gravelBoards * gravelBoardCost;
-const postcreteTotal = cementBags * postcreteCost;
-const total = panelsTotal + postsTotal + gravelTotal + postcreteTotal + labour + gateCost;
-
-let resultHTML = `<p><strong>Quote breakdown:</strong></p><ul>`;
-resultHTML += `<li>Fence panels (${panels} × £${panelCost}): £${panelsTotal.toFixed(2)}</li>`;
-resultHTML += `<li>Concrete posts (${posts} × £${postCost}): £${postsTotal.toFixed(2)}</li>`;
-resultHTML += `<li>Gravel boards (${gravelBoards} × £${gravelBoardCost}): £${gravelTotal.toFixed(2)}</li>`;
-resultHTML += `<li>Postcrete bags (${cementBags} × £${postcreteCost}): £${postcreteTotal.toFixed(2)}</li>`;
-resultHTML += `<li>Labour (${chargeableLength.toFixed(2)} m × £${labourRate}): £${labour.toFixed(2)}</li>`;
-if (numGates > 0) resultHTML += `<li>Gates (${numGates} × £150): £${gateCost.toFixed(2)}</li>`;
-resultHTML += `</ul><p><strong>Total price: £${total.toFixed(2)}</strong></p>`;
-
-document.getElementById('fenceResult').innerHTML = resultHTML;
-}
-</script>
 
 </body>
 </html>
